--- a/blog/app/assets/stylesheets/application.scss
+++ b/blog/app/assets/stylesheets/application.scss
@@ -15,3 +15,12 @@
  */
 
  @import "jquery-ui.css";
+
+ .textbox{
+    width: 3em;
+ }
+
+ input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
