--- a/blog/app/views/main_page/index.html.erb
+++ b/blog/app/views/main_page/index.html.erb
@@ -1,4 +1,5 @@
 <h1>Welcome to the main page!</h1>
 <ul>
     <li><%= link_to "Ruby blog tutorial", Article %></li>
+    <li><%= link_to "Minesweeper", :minesweeper %>
 </ul>
